--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,9 +9,11 @@
     "outDir": "./dist"
   },
   "include": [
+    "*",
     "*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
