--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,23 @@
     "dev": "ts-node index.ts"
   },
   "dependencies": {
+    "axios": "^1.7.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "sequelize": "^6.37.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^16.18.97",
+    "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
