Updated models to properly work with the database, added login/register form with formik, added CSSbaseline to later make it possible to switch dark/light mode

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
+    "sync": "ts-node model/sync.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node index.ts"
