--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "axios": "^1.6.8",
+    "backend": "file:../backend",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
