--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,8 +9,9 @@
     "outDir": "./dist"
   },
   "include": [
-    "*",
-    "*.ts"
+    "./*.ts",
+    "./model/**/*.ts",
+    "./**/*.ts"
   ],
   "exclude": [
     "node_modules",
