--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build-frontend": "npm run --prefix ../frontend build && rm -Rf dist && mv ../frontend/dist .",
     "sync": "ts-node model/sync.ts",
+    "server": "nodemon index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node index.ts"
